# Server-frame

./: .gitignore  CMakeLists.txt  LICENSE  bench.py  client.py
.cache/clangd/index/: Logger.cpp.E5032D8180894248.idx  Logger.h.5309B5E1CA4A6375.idx  Logger.h.E7C2C9E8352948B1.idx  Singleton.h.2F843423EA593F36.idx  Singleton.h.F449EBF248BB0865.idx  Value.cpp.26F42071B10D2DE1.idx  Value.h.CBB3E8E5B8A4AA6D.idx  client_socket.cpp.E801F885D0AAE9EB.idx  client_socket.h.5934F254474E1EA4.idx  echo_task.cpp.BD7D5B6F83E1A7BB.idx  echo_task.h.07BDFBD85FD85C4E.idx  event_poller.h.B056E4F37FE36356.idx  server_socket.cpp.14185BAC6A7DF1D5.idx  server_socket.h.DEEDD39CF34722D3.idx  socket.cpp.087E949420B214CC.idx  socket.h.EE4D5901A742B8E0.idx  socket_handler.cpp.1DA89E0E980F4038.idx  socket_handler.h.14057CED39F0EBA2.idx
src/: CMakeLists.txt  client.cpp  server.cpp
src/Task/: work_task.cpp  work_task.h
src/engine/: plugin.h  plugin_helper.cpp  work.cpp  work.h  workflow.cpp
src/epoll/: CMakeLists.txt  client.cpp  server.cpp
src/epoll/EventPoller/: CMakeLists.txt
src/epoll/Socket/: CMakeLists.txt  server_socket.cpp  socket.cpp  socket.h
src/epoll/SocketHandler/: CMakeLists.txt  echo_task.cpp  socket_handler.cpp
src/epoll/Task/: CMakeLists.txt  echo_task.cpp  echo_task.h
src/frame/: CMakeLists.txt
src/plugin/: CMakeLists.txt  echo_plugin.cpp  echo_plugin.h
src/socketHandler/: CMakeLists.txt  client_socket.cpp  client_socket.h  server_socket.h  socket_handler.cpp  socket_handler.h
src/thread/: CMakeLists.txt
src/utility/: CMakeLists.txt  Logger.cpp  Logger.h
src/xml/copy/: parser.cpp  parser.h  xml.cpp  xml.h
